suite de la correction du var_mode=inclure avec la dist : suppression du hoverflow: hidden sur .inclure_blocs

--- a/prive/spip_admin.css
+++ b/prive/spip_admin.css
@@ -47,7 +47,6 @@ a:active.spip-admin-boutons,
 	border:0 !important;
 	border-bottom:2px solid #FEFF7F !important;
 	background:url(images/fond-inclure.png) repeat top left !important;
-	overflow: hidden;
 }
 .inclure_blocs > h6 {
 	background: #FEFF7F;
